--- a/Vagrantfile.sample
+++ b/Vagrantfile.sample
@@ -17,22 +17,22 @@
 php_timezone_cli = "Europe/Rome"
 
 web_apps = {
-  "site1" => {
-    "host_project_folder"  => "../web-app-1/",
-    "guest_project_folder" => "/home/vagrant/web-app-1",
-    "guest_docroot"        => "/home/vagrant/web-app-1/web",
-    "server_name"          => "webapp1.test.local",
-    "server_aliases"       => ["*.webapp1"],
+  "adminer" => {
+    "host_project_folder"  => "~/Code/php/adminer/",
+    "guest_project_folder" => "/home/vagrant/adminer",
+    "guest_docroot"        => "/home/vagrant/adminer",
+    "server_name"          => "adminer.dev",
+    "server_aliases"       => [],
     "php_timezone"         => "Europe/Rome"
   },
-  "site2" => {
-    "host_project_folder"  => "../web-app-2/",
-    "guest_project_folder" => "/home/vagrant/web-app-2",
-    "guest_docroot"        => "/home/vagrant/web-app-2/web",
-    "server_name"          => "webapp2.test.local",
-    "server_aliases"       => [],
-    "php_timezone"         => "America/New_York"
-  }
+  # "test2" => {
+  #   "host_project_folder"  => "~/Code/php/test2/",
+  #   "guest_project_folder" => "/home/vagrant/test2",
+  #   "guest_docroot"        => "/home/vagrant/test2/web",
+  #   "server_name"          => "test2.dev",
+  #   "server_aliases"       => [".test2.dev"],
+  #   "php_timezone"         => "America/New_York"
+  # }
 }
 
 # You can probably get away with not changing these:
@@ -41,9 +41,10 @@ web_apps = {
 
 guest_ip              = "33.33.33.10"
 host_port             = 8080
-xdebug_remote_enabled = 1
+xdebug_remote_enabled = 0
 xdebug_remote_host    = "33.33.33.1"
 xdebug_remote_port    = 9000
+mysql_host_port       = 3307 # use this port to access the VM's mysql from host
 
 # -----------------------------------------------------------------------------
 
@@ -67,6 +68,7 @@ Vagrant::Config.run do |config|
   # Forward a port from the guest to the host, which allows for outside
   # computers to access the VM, whereas host only networking does not.
   config.vm.forward_port 80, host_port
+  config.vm.forward_port 3306, mysql_host_port
 
   # Share an additional folder to the guest VM. The first argument is
   # an identifier, the second is the path on the guest to mount the
